Update README file with instructions for running on Windows and JDK version